# deep-metric-learning

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
app/: datasets.py  main.py  ml_ops.py  model_cfg.yaml  models.py  objects.py  retrieval.py  search.py  utils.py
notebooks/: experiment.ipynb
