[project]
name = "deep-metric-learning"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.9.0"
authors = ["Ming Li <ming.george.li@gmail.com>"]
license = "MIT"
dependencies = [
    "appnope==0.1.2 ; python_full_version >= '3.8' and sys_platform == 'darwin'",
    "argon2-cffi==21.3.0 ; python_full_version >= '3.6'",
    "argon2-cffi-bindings==21.2.0 ; python_full_version >= '3.6'",
    "astroid==2.9.3 ; python_full_version >= '3.6.2'",
    "asttokens==2.0.5 ; python_full_version >= '3.8'",
    "attrs==21.4.0 ; python_full_version >= '3.7'",
    "backcall==0.2.0 ; python_full_version >= '3.8'",
    "black==21.12b0 ; python_full_version >= '3.6.2'",
    "bleach==4.1.0 ; python_full_version >= '3.7'",
    "cachetools==5.0.0 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "certifi==2021.10.8 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "cffi==1.15.0 ; python_full_version >= '3.7' and implementation_name == 'pypy'",
    "charset-normalizer==2.0.11 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "click==8.0.3 ; python_full_version >= '3.8'",
    "colorama==0.4.4 ; python_full_version >= '3.8' and sys_platform == 'win32'",
    "cycler==0.11.0 ; python_full_version >= '3.7'",
    "debugpy==1.5.1 ; python_full_version >= '3.7'",
    "decorator==5.1.1 ; python_full_version >= '3.8'",
    "defusedxml==0.7.1 ; python_full_version >= '3.7'",
    "entrypoints==0.4 ; python_full_version >= '3.7'",
    "executing==0.8.2 ; python_full_version >= '3.8'",
    "fonttools==4.29.1 ; python_full_version >= '3.7'",
    "google-api-core==2.5.0 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "google-auth==2.6.0 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "google-cloud-core==2.2.2 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "google-cloud-storage==2.1.0 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "google-crc32c==1.3.0 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "google-resumable-media==2.2.1 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "googleapis-common-protos==1.54.0 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "idna==3.3 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "ipykernel==6.9.0 ; python_full_version >= '3.7'",
    "ipython==8.0.1 ; python_full_version >= '3.8'",
    "ipython-genutils==0.2.0 ; python_full_version >= '3.7'",
    "ipywidgets==7.6.5",
    "isort==5.10.1 ; python_full_version >= '3.6.2' and python_full_version < '4.0'",
    "jedi==0.18.1 ; python_full_version >= '3.8'",
    "jinja2==3.0.3 ; python_full_version >= '3.7'",
    "joblib==1.1.0 ; python_full_version >= '3.7'",
    "jsonschema==4.4.0 ; python_full_version >= '3.7'",
    "jupyter==1.0.0",
    "jupyter-client==7.1.2 ; python_full_version >= '3.7'",
    "jupyter-console==6.4.0 ; python_full_version >= '3.6'",
    "jupyter-core==4.9.1 ; python_full_version >= '3.7'",
    "jupyterlab-pygments==0.1.2 ; python_full_version >= '3.7'",
    "jupyterlab-widgets==1.0.2 ; python_full_version >= '3.6'",
    "kiwisolver==1.3.2 ; python_full_version >= '3.7'",
    "lazy-object-proxy==1.7.1 ; python_full_version >= '3.6.2'",
    "markupsafe==2.0.1 ; python_full_version >= '3.7'",
    "matplotlib==3.5.1 ; python_full_version >= '3.7'",
    "matplotlib-inline==0.1.3 ; python_full_version >= '3.8'",
    "mccabe==0.6.1 ; python_full_version >= '3.6.2'",
    "mistune==0.8.4 ; python_full_version >= '3.7'",
    "mypy==0.931 ; python_full_version >= '3.6'",
    "mypy-extensions==0.4.3 ; python_full_version >= '3.8'",
    "nbclient==0.5.10 ; python_full_version >= '3.7'",
    "nbconvert==6.4.2 ; python_full_version >= '3.7'",
    "nbformat==5.1.3 ; python_full_version >= '3.7'",
    "nest-asyncio==1.5.4 ; python_full_version >= '3.7'",
    "ngt==1.12.2 ; sys_platform == 'linux'",
    "notebook==6.4.8 ; python_full_version >= '3.6'",
    "numpy<2.0.0 ; python_full_version >= '3.9'",
    "packaging==21.3 ; python_full_version >= '3.7'",
    "pandas==1.4.0 ; python_full_version >= '3.8'",
    "pandocfilters==1.5.0 ; python_full_version >= '3.7'",
    "parso==0.8.3 ; python_full_version >= '3.8'",
    "pathspec==0.9.0 ; python_full_version >= '3.8'",
    "pexpect==4.8.0 ; python_full_version >= '3.8' and sys_platform != 'win32'",
    "pickleshare==0.7.5 ; python_full_version >= '3.8'",
    "pillow==9.0.1 ; python_full_version >= '3.7'",
    "platformdirs==2.5.0 ; python_full_version >= '3.8'",
    "prometheus-client==0.13.1 ; python_full_version >= '3.6'",
    "prompt-toolkit==3.0.27 ; python_full_version >= '3.8'",
    "protobuf==3.19.4 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "ptyprocess==0.7.0 ; python_full_version >= '3.8' and os_name != 'nt' and sys_platform != 'win32'",
    "pure-eval==0.2.2 ; python_full_version >= '3.8'",
    "py==1.11.0 ; python_full_version >= '3.7' and implementation_name == 'pypy'",
    "pyasn1==0.4.8 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "pyasn1-modules==0.2.8 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "pybind11==2.9.1 ; (python_full_version >= '2.7' and python_full_version < '3.0.0' and sys_platform == 'linux') or (python_full_version >= '3.5' and sys_platform == 'linux')",
    "pycparser==2.21 ; python_full_version >= '3.7' and implementation_name == 'pypy'",
    "pygments==2.11.2 ; python_full_version >= '3.8'",
    "pylint==2.12.2 ; python_full_version >= '3.6.2'",
    "pyparsing==3.0.7 ; python_full_version >= '3.7'",
    "pyrsistent==0.18.1 ; python_full_version >= '3.7'",
    "python-dateutil==2.8.2 ; python_full_version >= '3.8'",
    "pytz==2021.3 ; python_full_version >= '3.8'",
    "pywin32==303 ; python_full_version >= '3.7' and platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "pywinpty==2.0.2 ; python_full_version >= '3.7' and os_name == 'nt'",
    "pyyaml==6.0 ; python_full_version >= '3.6'",
    "pyzmq==22.3.0 ; python_full_version >= '3.7'",
    "qtconsole==5.2.2 ; python_full_version >= '3.6'",
    "qtpy==2.0.1 ; python_full_version >= '3.6'",
    "requests==2.27.1 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "rsa==4.8 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "scikit-learn==1.0.2 ; python_full_version >= '3.7'",
    "scipy>=1.13.1 ; python_full_version >= '3.9'",
    "seaborn==0.11.2 ; python_full_version >= '3.6'",
    "send2trash==1.8.0 ; python_full_version >= '3.6'",
    "setuptools-scm==6.4.2 ; python_full_version >= '3.7'",
    "six==1.16.0 ; python_full_version >= '3.8' and python_full_version < '4.0'",
    "smart-open==5.2.1 ; python_full_version >= '3.6' and python_full_version < '4.0'",
    "stack-data==0.1.4 ; python_full_version >= '3.8'",
    "terminado==0.13.1 ; python_full_version >= '3.7'",
    "testpath==0.5.0 ; python_full_version >= '3.7'",
    "threadpoolctl==3.1.0 ; python_full_version >= '3.7'",
    "toml==0.10.2 ; python_full_version >= '3.6.2'",
    "tomli==1.2.3 ; python_full_version >= '3.8'",
    "torch==1.10.2 ; python_full_version >= '3.6.2'",
    "torchvision==0.11.3",
    "tornado==6.1 ; python_full_version >= '3.7'",
    "traitlets==5.1.1 ; python_full_version >= '3.8'",
    "types-pyyaml==6.0.4",
    "typing-extensions==4.0.1",
    "urllib3==1.26.8 ; python_full_version >= '3.7' and python_full_version < '4.0'",
    "wcwidth==0.2.5 ; python_full_version >= '3.8'",
    "webencodings==0.5.1 ; python_full_version >= '3.7'",
    "widgetsnbextension==3.5.2",
    "wrapt==1.13.3 ; python_full_version >= '3.6.2'",
]
